--- a/general-maths/probability/notes.ipynb
+++ b/general-maths/probability/notes.ipynb
@@ -5,28 +5,67 @@
    "id": "2ff27374",
    "metadata": {},
    "source": [
-    "## Axioms\n",
+    "# Basic Probability concepts\n",
     "\n",
-    "## Expectation\n",
+    "### Axioms, Basic theorems\n",
     "\n",
-    "## Variance\n",
+    "### Expectation\n",
     "\n",
-    "## Conditional Probability\n",
+    "### Variance\n",
     "\n",
-    "## Bayes\n",
+    "### Conditional Probability\n",
     "\n",
-    "## Limiting probability, distribution, etc.\n",
+    "### Bayes\n",
     "\n",
-    "## Common distributions\n",
+    "### Limiting probability, distribution, etc.\n",
     "\n",
-    "## Vector/Matrices extensions and definitions"
+    "### Common distributions\n",
+    "\n",
+    "### Vector/Matrices extensions and definitions"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "60895c90",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Important Inequalities\n",
+    "\n",
+    "\n",
+    "### Convexity and Concavity based inequalities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b0e9d6c",
+   "metadata": {},
+   "source": [
+    "# Concepts in Random walks\n",
+    "\n",
+    "### Markov Property\n",
+    "\n",
+    "### Martingales\n",
+    "\n",
+    "### Stopping time and the Optional Stopping Theorem\n",
+    "\n",
+    "### Mean reverting walks\n",
+    "\n",
+    "### Random walk on a graph\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fe8aa1f",
+   "metadata": {},
+   "source": [
+    "# Markov chains\n",
+    "\n",
+    "### Absorbing, transient, etc. states\n",
+    "\n",
+    "### Hitting Probability\n",
+    "\n",
+    "### Hitting time\n"
+   ]
   }
  ],
  "metadata": {
