some outlining and stuff

--- a/market-making/code/prereqs.ipynb
+++ b/market-making/code/prereqs.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3364c195",
+   "metadata": {},
+   "source": [
+    "# Maximum likelihood estimation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "37b4741d",
    "metadata": {},
    "source": [
-    "# Numerical methods for approximating HJB equations"
+    "# Numerical methods for approximating HJB equations\n",
+    "\n",
+    "### Reinforcement learning"
    ]
   },
   {
@@ -13,7 +23,9 @@
    "id": "a186e10e",
    "metadata": {},
    "source": [
-    "# Kalman Filters and Bayesian inference"
+    "# Bayesian estimation methods\n",
+    "### Kalman filter\n",
+    "### "
    ]
   }
  ],
