--- a/options/maths/prereqs.ipynb
+++ b/options/maths/prereqs.ipynb
@@ -362,7 +362,11 @@
     "It is negative for regular calls and puts and is sometimes known as the time decay of an option. This is because as maturity draws near the probability of finishing (deeper) in the money decreases.\n",
     "\n",
     "### Rho ($\\rho$)\n",
-    "$\\rho$ is the sensitivity of an option's price to changes in interest rates.\n",
+    "$\\rho$ is the sensitivity of an option's price to changes in interest rates. Below is an example of $\\rho$ for a European call option.\n",
+    "\\begin{array}{rl}\n",
+    "\\rho&=\\displaystyle \\frac{\\partial}{\\partial r}(S_tN(d_1)-Ke^{-r(T-t)}N(d_2))\\\\\\\\\n",
+    "&=Ke^{-r(T-t)}(T-t)N(d_2)\n",
+    "\\end{array}\n",
     "\n",
     "### Higher order greeks \n",
     "Higher-order greeks are simply higher order partial derivatives with respect to an option's price. Here are a few:\n",
