python outline done

--- a/general-programming/python/language_knowledge.ipynb
+++ b/general-programming/python/language_knowledge.ipynb
@@ -45,7 +45,18 @@
     "- match case guard:\n",
     "- try except else:\n",
     "\n",
-    "## Iteration: Looping methods, Methods on iterable objects (enumerate, zip, itertools), Generators, the walrus operator\n",
+    "## Iteration \n",
+    "- for loops\n",
+    "    - basic structure\n",
+    "    - adding the else statement\n",
+    "- while loops\n",
+    "    - basic while\n",
+    "- break and continue statements\n",
+    "- The walrus operator\n",
+    "- Extra methods:\n",
+    "    - enumerate\n",
+    "    - zip\n",
+    "    - itertools library\n",
     "\n",
     "## Functions\n",
     "- Function objects\n",
@@ -58,6 +69,7 @@
     "    - return keyword\n",
     "    - partial functions\n",
     "    - dynamic dispatch\n",
+    "- Generators\n",
     "- Recursion and stack frames\n",
     "- Some function decorators\n",
     "    - @log\n",
@@ -91,8 +103,10 @@
     "    - static and class methods:\n",
     "    - Meta classes:\n",
     "    - Dynamic class creation using type:\n",
-    "    - isinstance\n",
     "    - Class composition vs inheritance\n",
+    "- Other extra stuff:\n",
+    "    - Making classes hashable\n",
+    "    - isinstance, issubclass\n",
     "\n",
     "## Decorators in general\n",
     "- How they work and decorators on classes vs functions\n",
@@ -181,7 +195,8 @@
    "id": "5e13e5da",
    "metadata": {},
    "source": [
-    "# Using C/C++ with Python"
+    "# Using C/C++ with Python\n",
+    "## Cython"
    ]
   }
  ],
