--- a/general_knowledge/general-programming/python/language_knowledge.ipynb
+++ b/general_knowledge/general-programming/python/language_knowledge.ipynb
@@ -16,6 +16,18 @@
     "    - float\n",
     "    - complex\n",
     "- str\n",
+    "    - Some important methods: \n",
+    "        - split()\n",
+    "        - .join()\n",
+    "        - count()\n",
+    "        - ord()\n",
+    "        - chr()\n",
+    "        - isalpha()\n",
+    "        - isdigit()\n",
+    "        - startswith()\n",
+    "        - upper()\n",
+    "        - lower()\n",
+    "        - strip()\n",
     "- Sequence:\n",
     "    - list\n",
     "    - tuple\n",
@@ -31,6 +43,26 @@
     "    - memoryview\n",
     "- None:\n",
     "- Declaring custom datatypes using enums:\n",
+    "\n",
+    "## Everything print() related\n",
+    "- Format specifiers\n",
+    "- sep, end, file and flush arguments\n",
+    "\n",
+    "## General basic functions\n",
+    "- index()\n",
+    "- len()\n",
+    "- all()\n",
+    "- any()\n",
+    "- bin()\n",
+    "- input()\n",
+    "- max()\n",
+    "- min()\n",
+    "- sum()\n",
+    "- pow()\n",
+    "- repr()\n",
+    "- reversed()\n",
+    "- round()\n",
+    "- sorted()\n",
     "\n",
     "## Operators and some dunder methods\n",
     "- Truth value operators\n",
