--- a/options/code/prereqs.ipynb
+++ b/options/code/prereqs.ipynb
@@ -6,8 +6,11 @@
    "metadata": {},
    "source": [
     "# Random number generation\n",
-    "### From Uniform to Normal\n",
-    "### Simulating correlated normal variables"
+    "### From independent Uniform to independent Normal (Box Muller Transform)\n",
+    "\n",
+    "### From independent Normal to independent Uniform \n",
+    "\n",
+    "### Simulating correlated normal variables\n"
    ]
   },
   {
