--- a/options/maths/prereqs.ipynb
+++ b/options/maths/prereqs.ipynb
@@ -68,6 +68,11 @@
     "dY(t) = [\\frac{\\partial\\phi}{\\partial t} + \\frac{\\partial\\phi}{\\partial x}f(t,X(t)) + \\frac{1}{2}\\frac{\\partial^2\\phi}{\\partial x^2}g^2(t,X(t))]dt + \\frac{\\partial\\phi}{\\partial x}g(t,X(t))dW(t)\n",
     "\\end{equation*}\n",
     "\n",
+    "### Ito multiplication table\n",
+    "- $dtdt = 0$\n",
+    "- $dW_tdW_t=dt$\n",
+    "- $dtdW_t = dW_tdt = 0$\n",
+    "\n",
     "### Expectation and Variance of stochastic processes given SDE (an example)\n",
     "The following is an example of how you can apply ito integrals and ito's lemma to find the expectation and variance of a stochastic process given an SDE.\n",
     "\n",
