--- a/general_knowledge/general-maths/stats_notes.ipynb
+++ b/general_knowledge/general-maths/stats_notes.ipynb
@@ -7,17 +7,24 @@
    "source": [
     "## Hypothesis Testing\n",
     "\n",
+    "\n",
     "## Bootstrapping\n",
+    "\n",
     "\n",
     "## Maximum Likelihood Estimation\n",
     "\n",
+    "\n",
     "## OLS Regression\n",
+    "\n",
     "\n",
     "## Regularization\n",
     "\n",
+    "\n",
     "## Bayesian Inference\n",
     "\n",
-    "## Time Series Analysis"
+    "\n",
+    "## Time Series Analysis\n",
+    "\n"
    ]
   },
   {
