--- a/market-making/code/prereqs.ipynb
+++ b/market-making/code/prereqs.ipynb
@@ -2,30 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3364c195",
-   "metadata": {},
-   "source": [
-    "# Maximum likelihood estimation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "37b4741d",
    "metadata": {},
    "source": [
     "# Numerical methods for approximating HJB equations\n",
+    "\n",
+    "### Finite differences\n",
     "\n",
     "### Reinforcement learning"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a186e10e",
+   "id": "3364c195",
    "metadata": {},
    "source": [
-    "# Bayesian estimation methods\n",
-    "### Kalman filter\n",
-    "### "
+    "# Parameter estimation methods\n",
+    "### Maximum likelihood estimation\n",
+    "\n",
+    "### Bayesian methods"
    ]
   }
  ],
