Market making prereqs done

--- a/market-making/maths/prereqs.ipynb
+++ b/market-making/maths/prereqs.ipynb
@@ -91,7 +91,7 @@
     "Multiplication table with jumps:\n",
     "- $dtdt = dW_tdt = dtdW_t = dN_tdt = dtdN_t=dN_tdW_t=dW_tdN_t=0$\n",
     "- $dW_tdW_t = dt$\n",
-    "- $dN_tdN_t = dN_t$"
+    "- $dN_tdN_t = dN_t$\n"
    ]
   },
   {
