--- a/market-making/code/prereqs.ipynb
+++ b/market-making/code/prereqs.ipynb
@@ -5,11 +5,11 @@
    "id": "37b4741d",
    "metadata": {},
    "source": [
-    "# Numerical methods for approximating HJB equations\n",
+    "# Method of finite differences\n",
     "\n",
-    "### Finite differences\n",
+    "### Basic definition and necessary conditions \n",
     "\n",
-    "### Reinforcement learning"
+    "### Implementation for solving HJBs examples\n"
    ]
   },
   {
