--- a/market-making/maths/prereqs.ipynb
+++ b/market-making/maths/prereqs.ipynb
@@ -227,7 +227,7 @@
     "- At time $t=1$, LT1 and MMs enter the market with $i$ and $0$ units respectively and exit with $q_1^{LT1}$ and $q_1^{MM}$ units.\n",
     "- At time $t=2$, LT1 and MMs enter the market with $q_1^{LT1}$ and $q_1^{MM}$ units respectively and LT2 enters with $-i$. They exit with $q_2^{LT1},q_2^{LT2},q_2^{MM}$.\n",
     "\n",
-    "Let q_{t-1}^j denote the inventory of participant $j$ as they enter time $t$. The cash values of each participant are constrained by: \n",
+    "Let $q_{t-1}^j$ denote the inventory of participant $j$ as they enter time $t$. The cash values of each participant are constrained by: \n",
     "- $X_3^j = X_2^j+q_2^jS_3$ (Cash exiting $t=3$ = Cash + Value of inventory entering $t=3$)\n",
     "- $X_2^j+q_2^jS_2=X_1^j+q_1^jS_2$ (Value exiting $t=2$ = Value entering $t=2$)\n",
     "\n",
