--- a/options/code/prereqs.ipynb
+++ b/options/code/prereqs.ipynb
@@ -42,7 +42,7 @@
    "id": "29907c1a",
    "metadata": {},
    "source": [
-    "# Finite Differences\n",
+    "# Finite Differences with monte carlo\n",
     "\n",
     "### Approximating the partial derivatives\n",
     "\n",
