--- a/options/maths/volatility_trading.ipynb
+++ b/options/maths/volatility_trading.ipynb
@@ -1,5 +1,14 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "52728dd9",
+   "metadata": {},
+   "source": [
+    "# Replicating portfolio for volatility"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
