--- a/general_knowledge/general-programming/python/language_knowledge.ipynb
+++ b/general_knowledge/general-programming/python/language_knowledge.ipynb
@@ -100,7 +100,7 @@
     "    - Scopes: local, global and nonlocal assignment\n",
     "    - return keyword\n",
     "    - partial functions\n",
-    "    - dynamic dispatch\n",
+    "    - single and dynamic dispatch\n",
     "- Generators\n",
     "- Recursion and stack frames\n",
     "- Some function decorators\n",
@@ -219,7 +219,8 @@
     "### Pytorch\n",
     "\n",
     "## Miscellaneous\n",
-    "### pprint"
+    "### pprint\n",
+    "### datetime"
    ]
   },
   {
