--- a/general_knowledge/general-maths/stats_notes.ipynb
+++ b/general_knowledge/general-maths/stats_notes.ipynb
@@ -5,26 +5,53 @@
    "id": "406c333c",
    "metadata": {},
    "source": [
-    "## Hypothesis Testing\n",
+    "# Hypothesis Testing\n",
+    "Null hypothesis \n",
     "\n",
+    "Alternative hypothesis\n",
     "\n",
-    "## Bootstrapping\n",
+    "test statistic\n",
     "\n",
+    "p value\n",
     "\n",
-    "## Maximum Likelihood Estimation\n",
+    "Type 1 error\n",
     "\n",
+    "Type 2 error\n",
     "\n",
-    "## OLS Regression\n",
+    "power of a test\n",
     "\n",
+    "Multiple hypothesis testing\n",
     "\n",
-    "## Regularization\n",
+    "Corrections for multiple hypothesis testing\n",
+    "- Bonferroni correction\n",
+    "- Holm Bonferroni correction\n",
     "\n",
+    "Likelihood ratios\n",
     "\n",
-    "## Bayesian Inference\n",
+    "Bootstrapping\n",
     "\n",
+    "Confidence intervals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "436baaf4",
+   "metadata": {},
+   "source": [
+    "# Estimators\n",
+    "Estimators\n",
     "\n",
-    "## Time Series Analysis\n",
-    "\n"
+    "Bias\n",
+    "\n",
+    "Standard error and Variance\n",
+    "\n",
+    "MSE\n",
+    "\n",
+    "Maximum likelihood estimators\n",
+    "\n",
+    "Cramer lower bound\n",
+    "\n",
+    "Fisher information"
    ]
   }
  ],
