--- a/general_knowledge/general-programming/python/some_notes.ipynb
+++ b/general_knowledge/general-programming/python/some_notes.ipynb
@@ -143,7 +143,19 @@
     "### Processes, parallelism and multiprocessing\n",
     "A **process** is an instance of a running program that has its own memory space (variables, heap, stack), system resources and execution state separate from other processes. It consists of either just one or multiple threads executing together. By default, running say a simple ```.py``` python file will just activate a main thread and process. Using multiple threads can be specified, however, using the ```threading``` library.\n",
     "\n",
-    "**Multiprocessing** is the idea of setting up multiple processes for a single progam (```.py ``` file). Python's ```multiprocessing``` library is the built-in implementation of this functionality.It allows for **parallelism** whereby multiple bytecodes are being executed at once, under the condition that we have multiple cpu cores. If we have only one core however, we end up with concurrenct execution since a single cpu core can only do one instruction at a time. One important thing, even if running on one core, is that multiprocessing is \"safer\" than multithreading in the sense of corruption and race conditions."
+    "**Multiprocessing** is the idea of setting up multiple processes for a single progam (```.py ``` file). Python's ```multiprocessing``` library is the built-in implementation of this functionality.It allows for **parallelism** whereby multiple bytecodes are being executed at once, under the condition that we have multiple cpu cores. If we have only one core however, we end up with concurrenct execution since a single cpu core can only do one instruction at a time. One important thing, even if running on one core, is that multiprocessing is \"safer\" than multithreading in the sense of corruption and race conditions.\n",
+    "\n",
+    "### The OS, Virtual addresses and Physical memory\n",
+    "Every computer has an **operating system(OS)** that is responsible for managing memory among all other hardware. Every process being run is given/allocated its own memory via the OS. \n",
+    "\n",
+    "When allocating memory to processes, an OS will have whats called an **MMU(memory management unit)** that assigns a **virtual address space** filled with **virtual addresses** (e.g. 0x0000 for a 16 bit system and 0x00000000 for a 32 bit system), each of which maps to physical addresses/memory known as **pages** via a **memory map/page table** (like an index-value dict). Multiple **pages** make up the actual RAM in a computer.\n",
+    "\n",
+    "The **virtual address space** an OS provides splits into two regions: the **user space** which is what processes can access; and the **kernel space** which is only accessible by an OS.\n",
+    "\n",
+    "### Inter process communication in Python\n",
+    "Since every process has its own memory space, we can't share variables for **interprocess communication**. To share information/objects, multiprocessing has various built-in objects. These generally fall under two categories: copy and zero-copy (also known as true shared memory).\n",
+    "- built-ins involving copy are those that take in the information to be transferred from a process A, converts it into bytes via pickling, then copies the bytes into the **kernel-buffer**(which is in the kernel space). This then lets process B copy those bytes into its own memory to convert back into an object. The built-ins that use this process in ```multiprocessing``` are ```Manager()```, ```Pipes()```\n",
+    "- built-ins involving zero-copy utilize the idea of shared memory where virtual addresses of two different processes map to the exact same page in physical memory. The built-ins that use this include ```shared_memory.SharedMemory()```, ```Array()``` and ```Value```. Note that under the hood these all make use of the ```mmap``` library."
    ]
   },
   {
@@ -586,6 +598,37 @@
     "```\n",
     "\n",
     "Extra note: in cpp, dynamic dispatch only happens for virtual function and not everything (i.e. everything needs to be specified in the code if not virtual)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81bf0210",
+   "metadata": {},
+   "source": [
+    "# Packages and Modules in Python\n",
+    "### The ModuleType and Module objects\n",
+    "\n",
+    "\n",
+    "### Packages vs namespace packages: the effects of the ```__init__.py``` file\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e34bbc5",
+   "metadata": {},
+   "source": [
+    "# Short-note: For-else loops\n",
+    "```for-else``` loops are for loops which execute the else code block if ```break``` was not the reason for the for loop stopping.\n",
+    "\n",
+    "```python\n",
+    "for item in iterable:\n",
+    "    # loop body\n",
+    "else:\n",
+    "    # else block\n",
+    "```\n",
+    "\n"
    ]
   },
   {
