--- a/market-making/maths/prereqs.ipynb
+++ b/market-making/maths/prereqs.ipynb
@@ -5,7 +5,7 @@
    "id": "377e5263",
    "metadata": {},
    "source": [
-    "# Jump Processes [[src](https://personal.ntu.edu.sg/nprivault/MA5182/stochastic-calculus-jump-processes.pdf)]\n",
+    "# 1D Jump Processes [[src](https://personal.ntu.edu.sg/nprivault/MA5182/stochastic-calculus-jump-processes.pdf)]\n",
     "A **jump process** $N_t$ is stochastic process whose path is characterized by discrete jumps/changes in value at random interarrival times. Their SDEs produce non-continuous paths as a result of the jumps. Below, we'll explore the poisson process and its extensions which falls under the larger category of renewal processes.\n",
     "\n",
     "### Poisson Process\n",
@@ -113,7 +113,7 @@
     "- A **feedforward form** solution computes the control in advance (assuming a particular path the state process will take) and does not depend on the current running state. This is also known as open loop control.\n",
     "\n",
     "### Dynamic Programming Princple\n",
-    "Denote the state process driven by control $v$ and starting from $Z(t)=z$ by $Z_{t,z}^u(s)$. Similarly let $\\mathcal{A}_{t,z}$ be the admissible controls given the initial conditions. Note that anything indexed by subscript $t$, $(...)_t$, denotes the value at time $t$ of $(...)$.\n",
+    "Denote the state process driven by control $u$ and starting from $Z(t)=z$ by $Z_{t,z}^u(s)$. Similarly let $\\mathcal{A}_{t,z}$ be the admissible controls given the initial conditions. Note that anything indexed by subscript $t$, $(...)_t$, denotes the value at time $t$ of $(...)$.\n",
     "\n",
     "Suppose the following assumptions are satisfied:\n",
     "- Given stopping time $\\tau$, $\\forall s\\leq\\tau,Z_{t,z}^u(s)=Z_{\\tau,Z^{u}_{t,z}(\\tau)}^u(s)$\n",
@@ -861,7 +861,7 @@
    "metadata": {},
    "source": [
     "# Extensions\n",
-    "### Mathematics/Stats related\n",
+    "### Mathematics/Stats areas\n",
     "#### Proofs of existence, uniqueness and stability using Viscosity solutions\n",
     "#### Infinite activity levy processes\n",
     "#### Mean-field control \n",
@@ -869,9 +869,9 @@
     "#### Dimensionality reduction techniques\n",
     "#### Deep reinforcement learning\n",
     "\n",
-    "### Specifically Market-making/Finance related\n",
+    "### Papers that are on market-making/Finance\n",
     "#### Market-making with hawkes-driven order arrivals [[src](https://oxford-man.ox.ac.uk/wp-content/uploads/2020/05/Algorithmic-Trading-Stochastic-Control-and-Mutually-Exciting-Processes.pdf)]\n",
-    "#### Market-making with the order-book imbalance signal [[src](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2668277)]\n",
+    "#### Multi-asset market making [[src](https://arxiv.org/pdf/1810.04383)]\n",
     "#### Adverse selection and intensity modelling [[src](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=1964781)]\n",
     "#### Nonlinear price impact models[[src]()]\n",
     "#### Rebate farming [[src](https://arxiv.org/pdf/2501.12591)]\n",
@@ -879,7 +879,9 @@
     "#### Incorporating resting times/cooldown [[src](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3192844)]\n",
     "#### Custom alpha signal [[src](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3439440)]\n",
     "#### Incorporating latency [[src](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3433739)]\n",
-    "#### Queue position modelling [[src](https://arxiv.org/pdf/1312.0563)]"
+    "#### Queue position modelling [[src](https://arxiv.org/pdf/1312.0563)]\n",
+    "#### Market making for options [[src](https://arxiv.org/pdf/1907.12433)]\n",
+    "#### Market making with built in uncertainty [[src](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2310645)]"
    ]
   }
  ],
