--- a/options/maths/spreads.ipynb
+++ b/options/maths/spreads.ipynb
@@ -2,18 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "39fc3ea1",
+   "id": "7d74cd36",
    "metadata": {},
    "source": [
-    "# Primer on Beta"
+    "# Basics\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "51349d3c",
+   "id": "acd274b7",
    "metadata": {},
    "source": [
-    "# Stat arb with beta"
+    "# Vol spreads\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ddda979",
+   "metadata": {},
+   "source": [
+    "# Bull bear spreads"
    ]
   }
  ],
