--- a/stat-arb/maths/prereqs.ipynb
+++ b/stat-arb/maths/prereqs.ipynb
@@ -211,9 +211,9 @@
     "where $\\phi_r$ are all constants and $\\epsilon_t$ is noise with mean $0$ and variance $\\sigma^2$.\n",
     "\n",
     "A **moving average** process of order $q$, $MA(q)$, is a time series whose current value is a linear combination of white noise/error terms:\n",
-    "\\begin{equation}\n",
+    "\\begin{equation*}\n",
     "X_t = \\sum_{s=0}^q\\theta_s\\epsilon_{t-s}\n",
-    "\\end{equation}\n",
+    "\\end{equation*}\n",
     "where $\\theta_i$ are all fixed constants, and $\\epsilon_j$ are \"innovations\" with mean $0$ and variance $\\sigma^2$.\n",
     "Note that all moving average processes are weakly stationary, with strong stationarity occuring if $\\epsilon$ are also iid.\n",
     "\n",
@@ -267,12 +267,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "260a0a7f",
+   "metadata": {},
+   "source": [
+    "# Statistical Arbitrage via ETFs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6a07607f",
    "metadata": {},
    "source": [
     "# Statistical Arbitrage using factors: PCA [[src](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=1153505)]\n",
     "\n",
-    "### The dimensionality reduction problem\n",
+    "### Assumed returns model\n",
     "\n",
     "\n",
     "### PCA\n",
@@ -319,13 +327,12 @@
    "metadata": {},
    "source": [
     "# Extensions:\n",
+    "### Latency arbitrage\n",
+    "### Sniping arbitrage\n",
     "### Stat arb using ICA\n",
-    "\n",
     "Like PCA, ICA (independent component analysis) is also a method of dimensionality reduction. \n",
-    "\n",
     "### Risk control in stat arb\n",
     "### Multiasset stat arb framework\n",
-    "### Stochastic control approaches to stat arb\n",
     "### Stat arb with Deep ML\n",
     "### The factor zoo"
    ]
